setup homepage layout

--- a/client/src/styles/Hero.module.css
+++ b/client/src/styles/Hero.module.css
@@ -1,15 +1,13 @@
 .hero {
-  background-color: #fff; /* Or a light background color to match your theme */
+  background-color: #fff;
   padding-bottom: 2em;
 }
 
 .heroTag {
-  /* Customize styling as you wish */
 }
 
 .heroImage {
-  /* Optionally style to add rounded borders etc. */
-  height: 20em;
+  height: 25em;
   width: 100%;
   background-image: url("../../public/images/eggs.jpg");
   background-size: cover;
